# KinematicsForVR

./: .gitignore  CMakeLists.txt
include/: dxKin.h
install/include/: dxKin.h  dxKinInterface.h
install/lib/: ERL_VRKIN_LIB.lib
src/: dxKin.cpp  dxKinInterface.cpp  kinematicsForVR.cpp
